--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
-
+body {
+  display: block;
+  margin: 0px;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+}
 
 
 .container {
@@ -16,8 +23,8 @@
 
   .socialmedia {
     position: absolute;
-    top: 25px;
-    right: 300px;
+    top: 2%;
+    right: 18%;
     color: black;
       padding : 0px 40px;
       font-family: calibrated;
@@ -30,8 +37,8 @@
   
   .top-right {
     position: absolute;
-    top: 50px;
-    right: 350px;
+    top: 5%;
+    right: 20%;
   }
 
   .headtable{
