--- a/style.css
+++ b/style.css
@@ -25,16 +25,17 @@ body {
     position: absolute;
     top: 2%;
     right: 18%;
-    color: black;
+    color: rgba(0, 0, 0, 0.986);
       padding : 0px 40px;
       font-family: calibrated;
-      font-weight: 100;
+      font-weight: 200;
       font-style: normal;
-      font-size: 10px;
+      font-size: 15px;
+      text-decoration: none;
      
 
   }
-  
+ 
   .top-right {
     position: absolute;
     top: 5%;
